using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants
{

    #region Input

    public static readonly string HORIZONTAL = "Horizontal";
    public static readonly string JUMP_BUTTON = "Jump";
    public static readonly string FIRE1 = "Fire1";
    public static readonly string FIRE2 = "Fire2";

    #endregion

    #region Tags
    public static readonly string DAMAGEABLE = "Damageable";
    public static readonly string SLIDER = "Slider";
    public static readonly string ENEMY_STOPPER = "EnemyStopper";
    public static readonly string RED_BARREL = "RedBarrel";

    #endregion

    #region Player animations

    public static readonly string JUMP = "Jump";
    public static readonly string IN_AIR = "InAir";
    public static readonly string IS_RUNNING = "IsRunning";
    public static readonly string ATTACK = "Attack";
    public static readonly string SHOOT = "Shoot";
    public static readonly string IS_DEAD = "IsDead";
    public static readonly string SLASH = "Slash";
    public static readonly string VERTICAL_SPEED = "VerticalSpeed";
    #endregion

    #region Enemy animations
    public static readonly string VELOCITY = "Velocity";
    public static readonly string IS_ALIVE = "IsAlive";
    #endregion
}
